<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="@drawable/homescreen">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_v2" />

    <TextView
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="217dp"
        android:fontFamily="@font/grandehotel"
        android:text="@string/homeScreenTxt"
        android:textColor="@color/grey"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/llCont"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@drawable/greyradius"
        android:layout_width="match_parent"
        android:layout_height="600dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeScreenTitle"
            android:layout_marginTop="35dp"
            android:textSize="25sp"
            android:fontFamily="@font/thin"/>

        <EditText
            android:id="@+id/edtName"
            android:drawableEnd="@drawable/ic_person"
            android:background="@drawable/bgedt"
            android:layout_marginTop="35dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:paddingHorizontal="20dp"
            android:hint="@string/homeScreenEdt01"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="@color/whiteTxt"
            android:importantForAutofill="no"
            android:maxLength="25"
            android:textColor="@color/whiteTxt"
            android:inputType="text|textNoSuggestions|textCapWords"/>

        <EditText
            android:id="@+id/edtEmail"
            android:drawableEnd="@drawable/ic_email"
            android:background="@drawable/bgedt"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:paddingHorizontal="20dp"
            android:hint="@string/homeScreenEdt02"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="@color/whiteTxt"
            android:importantForAutofill="no"
            android:maxLength="25"
            android:textColor="@color/whiteTxt"
            android:inputType="text|textNoSuggestions|textCapWords"/>

        <EditText
            android:id="@+id/edtTelephone"
            android:drawableEnd="@drawable/ic_telephone"
            android:background="@drawable/bgedt"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:paddingHorizontal="20dp"
            android:hint="@string/homeScreenEdt03"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="@color/whiteTxt"
            android:importantForAutofill="no"
            android:maxLength="15"
            android:textColor="@color/whiteTxt"
            android:inputType="number|textNoSuggestions|textCapWords"/>

        <EditText
            android:id="@+id/edtPoint"
            android:drawableEnd="@drawable/ic_point"
            android:background="@drawable/bgedt"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:paddingHorizontal="20dp"
            android:hint="@string/homeScreenEdt04"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="@color/whiteTxt"
            android:importantForAutofill="no"
            android:maxLength="25"
            android:textColor="@color/whiteTxt"
            android:inputType="text|textNoSuggestions|textCapWords"/>

        <EditText
            android:id="@+id/edtMessage"
            android:drawableEnd="@drawable/ic_message"
            android:background="@drawable/bgedt"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:paddingHorizontal="20dp"
            android:hint="@string/homeScreenEdt05"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="@color/whiteTxt"
            android:importantForAutofill="no"
            android:maxLength="25"
            android:textColor="@color/whiteTxt"
            android:inputType="text|textNoSuggestions|textCapWords"/>

        <Button
            android:onClick="btnRegister"
            android:background="@drawable/bgbtn"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/homeScreenBtn"
            android:textColor="@color/grey"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:fontFamily="@font/grandehotel"/>

        <TextView
            android:onClick="txvAllRegisters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeScreenAllRegisters"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:fontFamily="@font/thin"/>

    </LinearLayout>

</RelativeLayout>